# Ai_agent_trade_claude

./: .env  .gitignore  ANSWERS.md  BUGFIX_NODE_NAMES.md  CONSOLIDATION_SUMMARY.md  CONTROL_GUIDE.md  Commands_cheat-sheet.md  Dockerfile  FINAL_CONFIGURATION.md  FINAL_SETUP.md  IMPROVEMENTS.md  ISSUE_RESOLVED.md  MASTER_DOCUMENTATION.md  QUICK_REFERENCE.md  QUICK_START_CARD.md  README.md  cleanup_docs.sh  docker-compose.yml  pyproject.toml  pytest.ini
app/: __init__.py
data/: backtest_data.csv
docs/: SETUP_GUIDE.md
scripts/: analyze_data_noise.py  analyze_ofi.py  check_url.py  convert_btc_data.py  convert_nifty_data.py  debug_keys.py  download_depth_data.py  download_trades.py  fetch_data.py  fetch_gap_data.py  merge_datasets.py  plot_btc_data.py  process_trades.py  quick_vectorized_test.py  quickstart.py  reconstruct_orderbook.py  run_backtest.py  run_paper_trade.py  test_config.py  verify_alpaca_connection.py  verify_gemini_connection.py  verify_graphs.py  verify_setup.sh
src/app/: config.py  control.py  healthcheck.py  main.py
src/app/langgraph_graphs/: full_mvp_graph.py  ingest_graph.py  momentum_graph.py
src/app/models/: ts_jepa.py
src/app/nodes/: data_sanitizer.py  execution_agent.py  feature_engineering.py  hedge_agent.py  market_ingest.py  mean_reversion_policy.py  momentum_policy.py  regime_classifier.py  (+3 more)
src/tests/: test_adx.py  test_execution_agent_smart.py  test_execution_safety.py  test_features.py  test_hedge_agent.py  test_ingest.py  test_kotak_neo_tool.py  test_mean_reversion.py  test_momentum_policy.py  test_ofi.py  test_risk_manager.py
(+16 files in other folders)
